--- a/hawc/apps/eco/templates/eco/fragments/_create_one.html
+++ b/hawc/apps/eco/templates/eco/fragments/_create_one.html
@@ -1,4 +1,4 @@
-<tr id={{id}} hx-target="this" >
+<tr hx-target="this" class="{% if not text %} hidden {% endif %} eco-edit-row {{class}}">
   {% if text %}
     <td colspan="100%">
       <p class="text-center mb-0">No {{text}}. Create one?</p>
