--- a/hawc/apps/eco/templates/eco/fragments/result_row.html
+++ b/hawc/apps/eco/templates/eco/fragments/result_row.html
@@ -1,4 +1,4 @@
-<tr hx-target="this" hx-swap="outerHTML" id="result-{{object.id}}">
+<tr hx-target="this" hx-swap="outerHTML" class="eco-obj-row {{action}}" id="result-{{object.id}}">
   <td>{{object.name}}</td>
   <td>{{object.cause.name}}</td>
   <td>{{object.effect.name }}</td>
@@ -13,5 +13,5 @@
   {% include "eco/fragments/_object_row.html" with model="result" %}
 </tr>
 {% if action == 'create' or action == 'clone' %}
-  <tr style="display: none" id="result-empty-row" hx-target="this"></tr>
+  <tr class="hidden eco-edit-row result-edit-row" hx-target="this"></tr>
 {% endif %}
