--- a/hawc/apps/epiv2/templates/epiv2/design_update.html
+++ b/hawc/apps/epiv2/templates/epiv2/design_update.html
@@ -13,7 +13,7 @@
   <div class="card my-4 mx-2">
     <div class="card-body">
       {% url 'epiv2:chemical-create' object.pk as chemical_create %}
-      {% include "epiv2/fragments/_create_card.html" with title="Chemicals" hx_get=chemical_create hx_target="#chemical-empty-row" %}
+      {% include "epiv2/fragments/_create_card.html" with title="Chemicals" hx_get=chemical_create hx_target=".chemical-edit-row" %}
       <table class="table table-sm table-striped">
         {% bs4_colgroup '43,42,15' %}
         {% bs4_thead 'Name,DTXSID,Edit' %}
@@ -22,9 +22,9 @@
             {% for object in object.chemicals.all %}
               {% include "epiv2/fragments/chemical_row.html" %}
             {% endfor %}
-            {% include "epiv2/fragments/_create_one.html" with id="chemical-empty-row" text="" %}
+            {% include "epiv2/fragments/_create_one.html" with class="chemical-edit-row" text="" %}
           {% else %}
-            {% include "epiv2/fragments/_create_one.html" with id="chemical-empty-row" text="chemicals" %}
+            {% include "epiv2/fragments/_create_one.html" with class="chemical-edit-row" text="chemicals" %}
           {% endif %}
         </tbody>
       </table>
@@ -34,7 +34,7 @@
   <div class="card my-4 mx-2">
     <div class="card-body">
       {% url 'epiv2:exposure-create' object.pk as exposure_create %}
-      {% include "epiv2/fragments/_create_card.html" with title="Exposure Measurements" hx_get=exposure_create hx_target="#exposure-empty-row" %}
+      {% include "epiv2/fragments/_create_card.html" with title="Exposure Measurements" hx_get=exposure_create hx_target=".exposure-edit-row" %}
       <table class="table table-sm table-striped">
         {% bs4_colgroup '29,28,28,15' %}
         {% bs4_thead 'Name,Measurement Type, Measurement Timing,Edit' %}
@@ -43,9 +43,9 @@
             {% for object in object.exposures.all %}
               {% include "epiv2/fragments/exposure_row.html" %}
             {% endfor %}
-            {% include "epiv2/fragments/_create_one.html" with id="exposure-empty-row" text="" %}
+            {% include "epiv2/fragments/_create_one.html" with class="exposure-edit-row" text="" %}
           {% else %}
-            {% include "epiv2/fragments/_create_one.html" with id="exposure-empty-row" text="exposure measurements" %}
+            {% include "epiv2/fragments/_create_one.html" with class="exposure-edit-row" text="exposure measurements" %}
           {% endif %}
         </tbody>
       </table>
@@ -55,7 +55,7 @@
   <div class="card my-4 mx-2">
     <div class="card-body">
       {% url 'epiv2:exposurelevel-create' object.pk as exposurelevel_create %}
-      {% include "epiv2/fragments/_create_card.html" with title="Exposure Levels" hx_get=exposurelevel_create hx_target="#exposurelevel-empty-row" %}
+      {% include "epiv2/fragments/_create_card.html" with title="Exposure Levels" hx_get=exposurelevel_create hx_target=".exposurelevel-edit-row" %}
       <table class="table table-sm table-striped">
         {% bs4_colgroup '17,17,17,17,17,15' %}
         {% bs4_thead 'Name,Chemical,Exposure,Central Tendency,Comments,Edit' %}
@@ -64,9 +64,9 @@
             {% for object in object.exposure_levels.all %}
               {% include "epiv2/fragments/exposurelevel_row.html" %}
             {% endfor %}
-            {% include "epiv2/fragments/_create_one.html" with id="exposurelevel-empty-row" text="" %}
+            {% include "epiv2/fragments/_create_one.html" with class="exposurelevel-edit-row" text="" %}
           {% else %}
-            {% include "epiv2/fragments/_create_one.html" with id="exposurelevel-empty-row" text="exposure levels" %}
+            {% include "epiv2/fragments/_create_one.html" with class="exposurelevel-edit-row" text="exposure levels" %}
           {% endif %}
         </tbody>
       </table>
@@ -76,7 +76,7 @@
   <div class="card my-4 mx-2">
     <div class="card-body">
       {% url 'epiv2:outcome-create' object.pk as outcome_create %}
-      {% include "epiv2/fragments/_create_card.html" with title="Outcomes" hx_get=outcome_create hx_target="#outcome-empty-row" %}
+      {% include "epiv2/fragments/_create_card.html" with title="Outcomes" hx_get=outcome_create hx_target=".outcome-edit-row" %}
       <table class="table table-sm table-striped">
         {% bs4_colgroup '22,21,21,21,15' %}
         {% bs4_thead 'System,Effect,Effect Detail,Endpoint/Outcome,Edit' %}
@@ -85,9 +85,9 @@
             {% for object in object.outcomes.all %}
               {% include "epiv2/fragments/outcome_row.html" %}
             {% endfor %}
-            {% include "epiv2/fragments/_create_one.html" with id="outcome-empty-row" text="" %}
+            {% include "epiv2/fragments/_create_one.html" with class="outcome-edit-row" text="" %}
           {% else %}
-            {% include "epiv2/fragments/_create_one.html" with id="outcome-empty-row" text="outcomes" %}
+            {% include "epiv2/fragments/_create_one.html" with class="outcome-edit-row" text="outcomes" %}
           {% endif %}
         </tbody>
       </table>
@@ -97,7 +97,7 @@
   <div class="card my-4 mx-2">
     <div class="card-body">
       {% url 'epiv2:adjustmentfactor-create' object.pk as adjustmentfactor_create %}
-      {% include "epiv2/fragments/_create_card.html" with title="Adjustment Factors" hx_get=adjustmentfactor_create hx_target="#adjustmentfactor-empty-row" %}
+      {% include "epiv2/fragments/_create_card.html" with title="Adjustment Factors" hx_get=adjustmentfactor_create hx_target=".adjustmentfactor-edit-row" %}
       <table class="table table-sm table-striped">
         {% bs4_colgroup '20,40,25,15' %}
         {% bs4_thead 'Name,Description,Comments,Edit' %}
@@ -106,9 +106,9 @@
             {% for object in object.adjustment_factors.all %}
               {% include "epiv2/fragments/adjustment_factor_row.html" %}
             {% endfor %}
-            {% include "epiv2/fragments/_create_one.html" with id="adjustmentfactor-empty-row" text="" %}
+            {% include "epiv2/fragments/_create_one.html" with class="adjustmentfactor-edit-row" text="" %}
           {% else %}
-            {% include "epiv2/fragments/_create_one.html" with id="adjustmentfactor-empty-row" text="adjustment factors" %}
+            {% include "epiv2/fragments/_create_one.html" with class="adjustmentfactor-edit-row" text="adjustment factors" %}
           {% endif %}
         </tbody>
       </table>
@@ -118,7 +118,7 @@
   <div class="card my-4 mx-2">
     <div class="card-body">
       {% url 'epiv2:dataextraction-create' object.pk as dataextraction_create %}
-      {% include "epiv2/fragments/_create_card.html" with title="Data Extractions" hx_get=dataextraction_create hx_target="#dataextraction-empty-row" %}
+      {% include "epiv2/fragments/_create_card.html" with title="Data Extractions" hx_get=dataextraction_create hx_target=".dataextraction-edit-row" %}
       <table class="table table-sm table-striped">
         {% bs4_colgroup '12,12,12,12,6,6,6,12,12,10' %}
         {% bs4_thead 'Group,Outcome,Exposure<br/>Level,Timing,Estimate<br>Type,N,Value,Confidence,Comments,Edit' %}
@@ -127,9 +127,9 @@
             {% for object in object.data_extractions.all %}
               {% include "epiv2/fragments/data_extraction_row.html" %}
             {% endfor %}
-            {% include "epiv2/fragments/_create_one.html" with id="dataextraction-empty-row" text="" %}
+            {% include "epiv2/fragments/_create_one.html" with class="dataextraction-edit-row" text="" %}
           {% else %}
-            {% include "epiv2/fragments/_create_one.html" with id="dataextraction-empty-row" text="extractions" %}
+            {% include "epiv2/fragments/_create_one.html" with class="dataextraction-edit-row" text="extractions" %}
           {% endif %}
         </tbody>
       </table>
@@ -147,6 +147,9 @@
   <script type="text/javascript">
     window.app.startup("epiv2Startup", function(app){
       app.formStartup(document);
+    });
+    $(window).ready(function() {
+      window.app.HAWCUtils.addScrollHTMX("epiv2-edit-row", "epiv2-obj-row");
     });
   </script>
 {% endblock %}
