--- a/hawc/apps/epiv2/templates/epiv2/fragments/adjustment_factor_row.html
+++ b/hawc/apps/epiv2/templates/epiv2/fragments/adjustment_factor_row.html
@@ -1,4 +1,4 @@
-<tr hx-target="this" hx-swap="outerHTML" class="adjustmentfactor-{{object.id}}">
+<tr hx-target="this" hx-swap="outerHTML" class="epiv2-obj-row {{action}} adjustmentfactor-{{object.id}}">
   <td>{{object.name}}</td>
   <td>
     {% split object.description as descriptions %}
@@ -10,5 +10,5 @@
   {% include "epiv2/fragments/_object_row.html" with model="adjustmentfactor" %}
 </tr>
 {% if action == 'create' or action == 'clone' %}
-  <tr style="display: none" id="adjustmentfactor-empty-row" hx-target="this"></tr>
+  <tr class="hidden adjustmentfactor-edit-row" hx-target="this"></tr>
 {% endif %}
