--- a/hawc/apps/epiv2/templates/epiv2/fragments/exposurelevel_row.html
+++ b/hawc/apps/epiv2/templates/epiv2/fragments/exposurelevel_row.html
@@ -1,4 +1,4 @@
-<tr hx-target="this" hx-swap="outerHTML" class="exposurelevel-{{object.pk}} chemical-{{object.chemical_id}} exposure-{{object.exposure_measurement_id}}">
+<tr hx-target="this" hx-swap="outerHTML" class="epiv2-obj-row {{action}} exposurelevel-{{object.pk}} chemical-{{object.chemical_id}} exposure-{{object.exposure_measurement_id}}">
   <td>{{object.name}}</td>
   <td>{{object.chemical}}</td>
   <td>{{object.exposure_measurement}}</td>
@@ -7,5 +7,5 @@
   {% include "epiv2/fragments/_object_row.html" with model="exposurelevel" %}
 </tr>
 {% if action == 'create' or action == 'clone' %}
-  <tr style="display: none" id="exposurelevel-empty-row" hx-target="this"></tr>
+  <tr class="hidden exposurelevel-edit-row" hx-target="this"></tr>
 {% endif %}
