--- a/hawc/apps/eco/templates/eco/fragments/_object_row.html
+++ b/hawc/apps/eco/templates/eco/fragments/_object_row.html
@@ -7,7 +7,7 @@
         <button id="{{model}}-confirm-del" class="btn btn-sm btn-danger mx-1" hx-post="{% crud_url 'eco' model 'delete' object.pk %}"
                 hx-swap="outerHTML swap:1s">Confirm</button>
         <button id="{{model}}-cancel-del" class="btn btn-sm btn-secondary mx-1"
-                hx-get="{% crud_url 'eco' model 'detail' object.pk %}">Cancel</button>
+                hx-get="{% crud_url 'eco' model 'read' object.pk %}">Cancel</button>
       </div>
     </form>
   </td>
