--- a/hawc/apps/epiv2/templates/epiv2/fragments/_object_edit_row.html
+++ b/hawc/apps/epiv2/templates/epiv2/fragments/_object_edit_row.html
@@ -10,7 +10,7 @@
           {% if form.instance.id %}
             <button id="{{model}}-save" class="btn btn-sm btn-primary" hx-post="{% crud_url 'epiv2' model 'update' object.pk %}">
               Save</button>
-            <button id="{{model}}-cancel" class="btn btn-sm btn-light" hx-get="{% crud_url 'epiv2' model 'detail' object.pk %}">
+            <button id="{{model}}-cancel" class="btn btn-sm btn-light" hx-get="{% crud_url 'epiv2' model 'read' object.pk %}">
               <i class="fa fa-fw fa-times mr-1"></i>
               Cancel</button>
           {% else %}
