--- a/hawc/apps/eco/templates/eco/design_update.html
+++ b/hawc/apps/eco/templates/eco/design_update.html
@@ -3,7 +3,7 @@
 {% block content %}
   <h2 class="d-inline-block">{{object.name}}</h2>
   <div class="float-right pb-2">
-    <a id="design-update" class="btn btn-sm btn-primary" href="#" hx-get="{% url 'eco:design-update' object.pk %}" hx-target="#design-table"
+    <a id="design-update" class="btn btn-sm btn-primary" href="#" hx-get="{% url 'eco:design-htmx' object.pk 'update' %}" hx-target="#design-table"
        hx-swap="outerHTML">
       <i class="fa fa-pencil-square-o" aria-hidden="true"></i>&nbsp;Update design</a>
   </div>
@@ -12,7 +12,7 @@
 
   <div class="card my-4 mx-2">
     <div class="card-body">
-      {% url 'eco:cause-create' object.pk as cause_create %}
+      {% url 'eco:cause-htmx' object.pk 'create' as cause_create %}
       {% include "eco/fragments/_create_card.html" with title="Causes" hx_get=cause_create hx_target="#cause-empty-row" model="cause" %}
       <table class="table table-sm table-striped">
         {% bs4_colgroup '10,15,15,15,15,15,15' %}
@@ -33,7 +33,7 @@
 
   <div class="card my-4 mx-2">
     <div class="card-body">
-      {% url 'eco:effect-create' object.pk as effect_create %}
+      {% url 'eco:effect-htmx' object.pk 'create' as effect_create %}
       {% include "eco/fragments/_create_card.html" with title="Effects" hx_get=effect_create hx_target="#effect-empty-row" model="effect" %}
       <table class="table table-sm table-striped">
         {% bs4_colgroup '10,15,15,15,15,15,15' %}
@@ -54,7 +54,7 @@
 
   <div class="card my-4 mx-2">
     <div class="card-body">
-      {% url 'eco:result-create' object.pk as result_create %}
+      {% url 'eco:result-htmx' object.pk 'create' as result_create %}
       {% include "eco/fragments/_create_card.html" with title="Results" hx_get=result_create hx_target="#result-empty-row" model="result" %}
       <table class="table table-sm table-striped">
         {% bs4_colgroup '15,15,15,10,15,15,15' %}
