--- a/hawc/apps/epiv2/templates/epiv2/design_update.html
+++ b/hawc/apps/epiv2/templates/epiv2/design_update.html
@@ -149,7 +149,7 @@
       app.formStartup(document);
     });
     $(window).ready(function() {
-      window.app.HAWCUtils.addScrollHTMX("epiv2-edit-row", "epiv2-obj-row");
+      window.app.HAWCUtils.addScrollHtmx("epiv2-edit-row", "epiv2-obj-row");
     });
   </script>
 {% endblock %}
