--- a/hawc/apps/lit/templates/lit/workflows.html
+++ b/hawc/apps/lit/templates/lit/workflows.html
@@ -18,7 +18,7 @@
   {% include "common/helptext_popup_js.html" %}
   <script type="text/javascript">
     $(window).ready(function() {
-      window.app.HAWCUtils.addScrollHTMX("workflow-edit-row", "workflow-row", "workflow-conf-delete");
+      window.app.HAWCUtils.addScrollHtmx("workflow-edit-row", "workflow-row", "workflow-conf-delete");
     });
   </script>
 {% endblock %}
