--- a/hawc/apps/eco/templates/eco/design_update.html
+++ b/hawc/apps/eco/templates/eco/design_update.html
@@ -81,7 +81,7 @@
 {% block extrajs %}
   <script type="text/javascript">
     $(window).ready(function() {
-      window.app.HAWCUtils.addScrollHTMX("eco-edit-row", "eco-obj-row");
+      window.app.HAWCUtils.addScrollHtmx("eco-edit-row", "eco-obj-row");
     });
   </script>
 {% endblock %}
