rename to better reflect what it does

--- a/hawc/apps/epiv2/templates/epiv2/fragments/_object_edit_row.html
+++ b/hawc/apps/epiv2/templates/epiv2/fragments/_object_edit_row.html
@@ -18,7 +18,7 @@
               Save
             </button>
             <button id="{{model}}-cancel" class="btn btn-sm btn-light" type='button'
-                    onclick="window.app.HAWCUtils.deleteRow($(this).closest('.epiv2-edit-row'), hide=true)"><i
+                    onclick="window.app.HAWCUtils.hideElement($(this).closest('.epiv2-edit-row'))"><i
               class="fa fa-fw fa-times mr-1"></i>
               Cancel</button>
           {% endif %}
