--- a/hawc/apps/lit/templates/lit/fragments/workflow_edit_row.html
+++ b/hawc/apps/lit/templates/lit/fragments/workflow_edit_row.html
@@ -62,7 +62,7 @@
             <button class="btn btn-light"
                     id="workflow-cancel"
                     type='button'
-                    onclick="window.app.HAWCUtils.deleteRow($(this).closest('.workflow-edit-row'), hide=true)"
+                    onclick="window.app.HAWCUtils.hideElement($(this).closest('.workflow-edit-row'))"
                     style="width: 10rem; height: 2rem;">
               Cancel
             </button>
