--- a/hawc/apps/eco/templates/eco/design_update.html
+++ b/hawc/apps/eco/templates/eco/design_update.html
@@ -13,7 +13,7 @@
   <div class="card my-4 mx-2">
     <div class="card-body">
       {% url 'eco:cause-htmx' object.pk 'create' as cause_create %}
-      {% include "eco/fragments/_create_card.html" with title="Causes" hx_get=cause_create hx_target="#cause-empty-row" model="cause" %}
+      {% include "eco/fragments/_create_card.html" with title="Causes" hx_get=cause_create hx_target=".cause-edit-row" model="cause" %}
       <table class="table table-sm table-striped">
         {% bs4_colgroup '10,15,15,15,15,15,15' %}
         {% bs4_thead 'Name,Term,Species,Level,Level Units,Comment,Edit' %}
@@ -22,9 +22,9 @@
             {% for object in causes %}
               {% include "eco/fragments/cause_row.html" %}
             {% endfor %}
-            {% include "eco/fragments/_create_one.html" with id="cause-empty-row" text="" %}
+            {% include "eco/fragments/_create_one.html" with class="cause-edit-row" text="" %}
           {% else %}
-            {% include "eco/fragments/_create_one.html" with id="cause-empty-row" text="causes" %}
+            {% include "eco/fragments/_create_one.html" with class="cause-edit-row" text="causes" %}
           {% endif %}
         </tbody>
       </table>
@@ -34,7 +34,7 @@
   <div class="card my-4 mx-2">
     <div class="card-body">
       {% url 'eco:effect-htmx' object.pk 'create' as effect_create %}
-      {% include "eco/fragments/_create_card.html" with title="Effects" hx_get=effect_create hx_target="#effect-empty-row" model="effect" %}
+      {% include "eco/fragments/_create_card.html" with title="Effects" hx_get=effect_create hx_target=".effect-edit-row" model="effect" %}
       <table class="table table-sm table-striped">
         {% bs4_colgroup '10,15,15,15,15,15,15' %}
         {% bs4_thead 'Name,Term,Species,Units,As Reported,Comment,Edit' %}
@@ -43,9 +43,9 @@
             {% for object in effects %}
               {% include "eco/fragments/effect_row.html" %}
             {% endfor %}
-            {% include "eco/fragments/_create_one.html" with id="effect-empty-row" text="" %}
+            {% include "eco/fragments/_create_one.html" with class="effect-edit-row" text="" %}
           {% else %}
-            {% include "eco/fragments/_create_one.html" with id="effect-empty-row" text="effects" %}
+            {% include "eco/fragments/_create_one.html" with class="effect-edit-row" text="effects" %}
           {% endif %}
         </tbody>
       </table>
@@ -55,7 +55,7 @@
   <div class="card my-4 mx-2">
     <div class="card-body">
       {% url 'eco:result-htmx' object.pk 'create' as result_create %}
-      {% include "eco/fragments/_create_card.html" with title="Results" hx_get=result_create hx_target="#result-empty-row" model="result" %}
+      {% include "eco/fragments/_create_card.html" with title="Results" hx_get=result_create hx_target=".result-edit-row" model="result" %}
       <table class="table table-sm table-striped">
         {% bs4_colgroup '15,15,15,10,15,15,15' %}
         {% bs4_thead 'Name,Cause,Effect,Relationship Direction,Modifying Factors,Value,Edit' %}
@@ -64,9 +64,9 @@
             {% for object in results %}
               {% include "eco/fragments/result_row.html" %}
             {% endfor %}
-            {% include "eco/fragments/_create_one.html" with id="result-empty-row" text="" %}
+            {% include "eco/fragments/_create_one.html" with class="result-edit-row" text="" %}
           {% else %}
-            {% include "eco/fragments/_create_one.html" with id="result-empty-row" text="results" %}
+            {% include "eco/fragments/_create_one.html" with class="result-edit-row" text="results" %}
           {% endif %}
         </tbody>
       </table>
@@ -76,4 +76,12 @@
   <div class="well text-center">
     <a class="btn btn-light my-3" id="design-page-cancel" href="{{object.get_absolute_url}}"><i class="fa fa-fw fa-times"></i>Cancel</a>
   </div>
+{% endblock %}
+
+{% block extrajs %}
+  <script type="text/javascript">
+    $(window).ready(function() {
+      window.app.HAWCUtils.addScrollHtmx("eco-edit-row", "eco-obj-row");
+    });
+  </script>
 {% endblock %}
