--- a/hawc/apps/eco/templates/eco/fragments/_object_edit_row.html
+++ b/hawc/apps/eco/templates/eco/fragments/_object_edit_row.html
@@ -1,4 +1,4 @@
-<tr hx-target="this" hx-swap="outerHTML swap:0s" id="{{model}}-empty-row">
+<tr hx-target="this" hx-swap="outerHTML swap:0s" class="eco-edit-row {{model}}-edit-row">
   {% if form %}
     <td colspan="100%">
       <form method="post" class="border my-2 p-2 pb-5 edit-form-background form-{{model}}">
@@ -18,7 +18,7 @@
               Save
             </button>
             <button id="{{model}}-cancel" class="btn btn-sm btn-light" type='button'
-                    onclick="this.parentNode.parentNode.parentNode.setAttribute('style', 'display: none')"><i
+                    onclick="window.app.HAWCUtils.hideElement($(this).closest('.eco-edit-row'))"><i
               class="fa fa-fw fa-times mr-1"></i>
               Cancel</button>
           {% endif %}
