--- a/hawc/apps/lit/templates/lit/fragments/workflow_row.html
+++ b/hawc/apps/lit/templates/lit/fragments/workflow_row.html
@@ -1,7 +1,7 @@
 <div
   {% if obj_perms.edit_assessment or permissions.edit_assessment %}
     hx-get="{{ object.get_edit_url }}"
-    class="box-shadow p-3 rounded mb-4 clickable"
+    class="box-shadow p-3 rounded mb-4 clickable workflow-row"
     hx-indicator="#spinner-{{object.pk}}"
     title="Click to update" hx-swap="outerHTML"
   {% else %}
@@ -10,12 +10,12 @@
   style="width: fit-content;">
   <div class="d-flex">
     <h4 class="mb-3">{{object.title}}&nbsp;<i class="fa fa-spinner fa-spin htmx-indicator" id="spinner-{{object.pk}}" aria-hidden="true"></i></h4>
-    <div class="ml-auto align-self-start d-flex flex-shrink-0 flex-wrap-0">
+    <div class="ml-auto align-self-start d-flex flex-wrap">
       {% if object.link_conflict_resolution %}
-        <span class="outline-btn ml-2 rounded btn-tny"><i class="fa fa-link" aria-hidden="true"></i>&nbsp; Conflict Resolution linked on Literature Review</span>
+        <span class="outline-btn ml-2 rounded btn-tny flex-shrink-0"><i class="fa fa-link" aria-hidden="true"></i>&nbsp; Conflict Resolution linked on Literature Review</span>
       {% endif %}
       {% if object.link_tagging %}
-        <span class="outline-btn ml-2 rounded btn-tny"><i class="fa fa-link" aria-hidden="true"></i>&nbsp; Tagging linked on Literature Review</span>
+        <span class="outline-btn ml-2 rounded btn-tny flex-shrink-0"><i class="fa fa-link" aria-hidden="true"></i>&nbsp; Tagging linked on Literature Review</span>
       {% endif %}
     </div>
   </div>
@@ -89,6 +89,6 @@
     </div>
   </div>
   <div class="mt-2 ml-1 d-flex justify-content-center text-center">
-    <i class="m-0 text-muted" style="max-width: 800px;">{{object.description}}</i>
+    <i class="m-0 text-muted" style="max-width: 75%;">{{object.description}}</i>
   </div>
 </div>
