--- a/hawc/apps/lit/templates/lit/workflows.html
+++ b/hawc/apps/lit/templates/lit/workflows.html
@@ -16,4 +16,9 @@
 {% block extrajs %}
   {% include "common/htmx_autocomplete.html" %}
   {% include "common/helptext_popup_js.html" %}
+  <script type="text/javascript">
+    $(window).ready(function() {
+      window.app.HAWCUtils.addScrollHtmx("workflow-edit-row", "workflow-row", "workflow-conf-delete");
+    });
+  </script>
 {% endblock %}
