--- a/hawc/apps/myuser/templates/myuser/hawcuser_form.html
+++ b/hawc/apps/myuser/templates/myuser/hawcuser_form.html
@@ -4,5 +4,6 @@
 
 {% block content %}
   {% crispy form %}
+  {{form.turnstile.get_challenge_text}}
   {% include "registration/license.html" with modal_id='license_modal'%}
 {% endblock content %}
