--- a/hawc/apps/myuser/templates/myuser/userprofile_detail.html
+++ b/hawc/apps/myuser/templates/myuser/userprofile_detail.html
@@ -18,6 +18,7 @@
     <tbody>
       {% optional_table_row "Name" user.get_full_name %}
       {% optional_table_row "Email" user.email %}
+      {% optional_table_row "ID" user.id %}
       {% optional_table_row "External ID" user.external_id %}
       <tr>
         <th>Can Create Assessments</th>
