--- a/hawc/apps/common/templates/common/widgets/turnstile.html
+++ b/hawc/apps/common/templates/common/widgets/turnstile.html
@@ -1,3 +1,2 @@
-<script src="{{ api_url }}" async defer></script>
-<div class="cf-turnstile" {% include "django/forms/widgets/attrs.html" %}><label>Let us know you're human</label></div>
-
+{% if widget.required %}<script src="{{ api_url }}" async defer></script>
+  <div class="cf-turnstile" {% include "django/forms/widgets/attrs.html" %}></div>{% endif %}
