--- a/hawc/apps/mgmt/templates/mgmt/assessment_details.html
+++ b/hawc/apps/mgmt/templates/mgmt/assessment_details.html
@@ -4,7 +4,7 @@
   <div class="d-flex">
     <h2>Task assignments</h2>
     {% actions %}
-      <a class="dropdown-item" href="{% url 'mgmt:user-assessment-task-list' assessment.pk %}">My assigned tasks</a>
+      <a class="dropdown-item" href="?owner={{user.id}}">My assigned tasks</a>
     {% endactions %}
   </div>
 
@@ -29,7 +29,7 @@
         </tr>
       </thead>
       {% for object in object_list %}
-        {% include "mgmt/fragments/task_detail.html" with fmt="tr" %}
+        {% include "mgmt/fragments/task_detail.html" %}
       {% endfor %}
     </table>
     {% include "includes/paginator.html" with plural_object_name="tasks" %}
