rename UDF table fragment

--- a/hawc/apps/study/templates/study/study_detail.html
+++ b/hawc/apps/study/templates/study/study_detail.html
@@ -70,6 +70,8 @@
 
   <div id="study_details"></div>
 
+  {% include "udf/fragments/table.html" with object=udf_content %}
+
   {% if obj_perms.edit and internal_communications|hastext %}
     <table class="table table-sm table-striped">
       <colgroup>
@@ -129,8 +131,6 @@
     {% if study.eco %}
       {% include "eco/fragments/_design_list.html" with object_list=object.eco_designs.all %}
     {% endif %}
-
-    {% include "udf/fragments/_udf_content.html" with object=udf_content %}
 
   {% endif %}
 
