empty list width

--- a/hawc/apps/mgmt/templates/mgmt/assessment_details.html
+++ b/hawc/apps/mgmt/templates/mgmt/assessment_details.html
@@ -28,7 +28,7 @@
       {% include "mgmt/fragments/task_detail.html" %}
     {% empty %}
       <tr>
-        <td>
+        <td colspan="100%">
           <i>No tasks available.</i>
         </td>
       </tr>
